# Recommendation_Engine

./: .gitignore  APPROACH_DOCUMENT.md  README.md  REQUIREMENTS.md  requirements.txt  run.py
app/: README.md  __init__.py  main.py
app/controllers/: __init__.py  recommendation_controller.py  user_controller.py
app/core/: __init__.py  config.py  database.py  exceptions.py  logger.py
app/models/: user.py
app/repositories/: __init__.py  user_repository.py
app/schemas/: __init__.py  recommendation.py  user.py
app/services/: __init__.py  recommendation_service.py  scraper_service.py  (+1 more)
doc/: APPROACH_DOCUMENT.md  REQUIREMENTS.md
frontend/: README.md  index.html
screenshots/: Recommendations.md
shl_recommendation_system/: README.md  Untitled  main.py  pipeline.py  pyproject.toml  requirements.txt  submission.csv
shl_recommendation_system/catalog/: __init__.py  filters.py  loader.py
shl_recommendation_system/data/: bm25_index.pkl  faiss_metadata.json  shl_catalog.json
shl_recommendation_system/evaluation/: __init__.py  generate_submission.py  recall.py  runner.py  tune_weights.py
shl_recommendation_system/reranker/: __init__.py  balance.py  fusion.py  mmr.py  query_understanding.py  skill_matching.py
shl_recommendation_system/retrieval/: __init__.py  dense.py  sparse.py
shl_recommendation_system/scraper/: __init__.py  browser.py  build_from_train.py  crawler.py  expand_catalog.py  parsers.py
shl_recommendation_system/tests/: test_devops_query.py  test_recall.py
shl_recommendation_system/utils/: __init__.py  config.py  llm_client.py
(+8 files in other folders)
